--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+  font-family: 'Athelas';
+  src: url('./assets/fonts/athelas-regular.woff') format('woff'),
+       url('./assets/fonts/athelas-regular.ttf') format('truetype');
+}
