[add] #2 worksコンポーネント編集 + workコンテンツのtemplateComponent追加

--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -1,7 +1,8 @@
-
-<p class="Works-title">works</p>
-<ul>
-  <li *ngFor="let imgUrl of workImgList">
-    <img src="{{imgUrl}}?fit=crop&w=200&h=200"/>
-  </li>
-</ul>
+<div>
+  <p class="Works-title">works</p>
+  <ul>
+    <li *ngFor="let imgUrl of workImgList">
+      <img src="{{imgUrl}}?fit=crop&w=200&h=200"/>
+    </li>
+  </ul>
+</div>
