[fix] #3 worksコンポーネント編集 + workコンテンツのtemplateComponent編集+ scssのmixins・variables追加

--- a/src/app/components/works/work-template1/work-template1.component.html
+++ b/src/app/components/works/work-template1/work-template1.component.html
@@ -1,1 +1,8 @@
-<p>work111</p>
+<div class="container">
+  <p class="text">{{firstText}}</p>
+  <div class="img">
+    <img src={{work.works_img.url}} />
+  </div>
+  <p class="text">{{secondText}}</p>
+</div>
+<p class="pageNo">-{{work.works_num}}-</p>
