--- a/src/app/components/works/work-template2/work-template2.component.html
+++ b/src/app/components/works/work-template2/work-template2.component.html
@@ -1,5 +1,8 @@
-<div id="left-box">
-  <div class="space"></div>
-  <div class="img"><img src={{work.works_img.url}} /></div>
-  <p>{{work.works_text}}</p>
+<div class="container">
+  <div class="img">
+    <img src={{work.works_img.url}} />
+    <span class="initialChar">{{initialChar}}</span>
+  </div>
+  <p class="text">{{mainText}}</p>
 </div>
+<p class="pageNo">-{{work.works_num}}-</p>
