--- a/src/app/components/works/work-template3/work-template3.component.html
+++ b/src/app/components/works/work-template3/work-template3.component.html
@@ -1,1 +1,7 @@
-<p>work-template3 works!</p>
+<div class="container">
+  <p class="text">{{work.works_text}}</p>
+  <div class="img">
+    <img src={{work.works_img.url}} />
+  </div>
+</div>
+<p class="pageNo">-{{work.works_num}}-</p>
