[add] #4 contact + footer コンポーネント追加

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
 <app-header></app-header>
 <app-topview></app-topview>
 <app-works></app-works>
+<app-contact></app-contact>
+<app-footer></app-footer>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
