--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -1,6 +1,6 @@
-<div id="works">
+<div id="works" class="works-boxes">
   <p class="Works-title">works</p>
-  <ul>
+  <ul class="works-box">
     <li *ngFor="let imgUrl of workImgList">
       <img src="{{imgUrl}}?fit=crop&w=200&h=200"/>
     </li>
