--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,9 @@
   src: url('./assets/fonts/athelas-regular.woff') format('woff'),
        url('./assets/fonts/athelas-regular.ttf') format('truetype');
 }
+
+
+* {
+  margin: 0;
+  padding: 0;
+  }
