--- a/src/app/components/topview/topview.component.scss
+++ b/src/app/components/topview/topview.component.scss
@@ -2,17 +2,16 @@
 
 	img{
     width: 100%;
-    height: 600px;
+    margin-bottom: 500px;
   }
-
 
 
 
 @media screen and (max-width: 750px) {
   img {
-    max-width: 750px;
-    height: 1000px;
+    max-width: 100%;
     object-fit : none;
     object-position : 22% 50%;
+    margin-bottom: 1032px;
   }
 }
