--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -9,6 +9,8 @@
 
 p.Works-title{
   font-family: 'Book Antiqua';
+  color: #2E2D2D;
+  letter-spacing: 3.25px;
   font-size: 25px;
   text-align: center;
   margin-bottom: 80px;
