--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,16 @@
-@import 'common';
+
 
 .Header-title{
   font-family: 'Athelas';
+  font-size: 15px;
+  margin: 17px 25px;
 }
+
+@media screen and (max-width: 750px) {
+  .Header-title{
+    font-family: 'Athelas';
+    font-size: 23px;
+    margin: 25px 24px;;
+  }
+}
+
