--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -1,1 +1,65 @@
 @import 'common';
+
+
+
+.works-boxes{
+  width: 399px;
+  height: 493px;
+  margin: 0px auto;
+
+p.Works-title{
+  font-family: 'Book Antiqua';
+  color: #2E2D2D;
+  letter-spacing: 3.25px;
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 80px;
+}
+.works-box{
+  display: flex;
+  justify-content: space-around;
+  float:left;
+  flex-wrap: wrap;
+  
+  li{
+    list-style: none;
+
+    img{
+      width: 100px;
+      height: 100px;
+      margin-bottom: 50px;
+    }
+  }
+ }
+}
+
+@media screen and (max-width: 750px) {
+  .works-boxes{
+    width: 680px;
+    height: 850px;
+    margin: 0px auto;
+  
+  p.Works-title{
+    font-family: 'Book Antiqua';
+    font-size: 37px;
+    text-align: center;
+    margin-bottom: 150px;
+  }
+  .works-box{
+    display: flex;
+    justify-content: space-around;
+    float:left;
+    flex-wrap: wrap;
+    
+    li{
+      list-style: none;
+  
+      img{
+        width: 200px;
+        height: 200px;
+        margin-bottom: 40px;
+      }
+    }
+   }
+  }
+}
