topview画像サイズ編集

--- a/src/app/components/topview/topview.component.scss
+++ b/src/app/components/topview/topview.component.scss
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 750px) {
   img {
-    max-width: 100%;
+    width: 680px;
     object-fit : none;
     object-position : 22% 50%;
     margin-bottom: 1032px;
