--- a/src/app/components/topview/topview.component.scss
+++ b/src/app/components/topview/topview.component.scss
@@ -7,11 +7,10 @@
 
 
 
-@media screen and (max-width: 750px) {
-  img {
-    max-width: 100%;
-    object-fit : none;
-    object-position : 22% 50%;
-    margin-bottom: 1032px;
+@media screen and (max-width: 768px) {
+  img{
+    min-width:100%;
+    height: auto;
+    margin-bottom: 500px;
   }
 }
