--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,14 +2,14 @@
 
 .Header-title{
   font-family: 'Athelas';
-  font-size: 15px;
+  font-size: 1.5vw;
   margin: 17px 25px;
 }
 
 @media screen and (max-width: 768px) {
   .Header-title{
     font-family: 'Athelas';
-    font-size: 23px;
+    font-size: 2.5vw;
     margin: 25px 24px;;
   }
 }
