worksフォント修正

--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -11,9 +11,9 @@
   font-family: 'Book Antiqua';
   color: #2E2D2D;
   letter-spacing: 3.25px;
-  font-size: 25px;
+  font-size: 2vw;
   text-align: center;
-  margin-bottom: 80px;
+  margin-bottom: 15vh;
 }
 
 .works-box{
@@ -46,9 +46,9 @@ img{
 
   p.Works-title{
     font-family: 'Book Antiqua';
-    font-size: 37px;
+    font-size: 4vw;
     text-align: center;
-    margin-bottom: 150px;
+    margin-bottom: 10vh;
   }
   .works-box{
     width: 100%;
