--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,9 +5,9 @@
   <p class="name">KOTARO YAMAMOTO</p>
 </div>
 <div>
-  <p class="">ご依頼は下記メールアドレスまでご連絡ください。</p>
-  <p class="">For requests,please contact the following email address.</p>
+  <p class="jap-message">ご依頼は下記メールアドレスまでご連絡ください。</p>
+  <p class="en-message">For requests,please contact the following email address.</p>
 </div>
 <div>
-  <a href="mailto:kotaro.ymt@gmail.com"><p class="">kotaro.ymt@gmail.com</p></a>
+  <a href="mailto:kotaro.ymt@gmail.com"><p class="address">kotaro.ymt@gmail.com</p></a>
 </div>
