--- a/src/app/components/works/work-template1/work-template1.component.scss
+++ b/src/app/components/works/work-template1/work-template1.component.scss
@@ -12,7 +12,7 @@
 .container {
   display: flex;
   width: $works-container-width;
-  padding: 25px;
+  margin: 60vh auto 0;
   overflow: hidden;/*float解除*/
 }
 .container img{
@@ -25,4 +25,35 @@
   @include worksPageNo();
 }
 
+@media screen and (max-width: 768px) {
+  .text{
+    @include worksText();
+    font-size: 2vw;
 
+  }
+  .container {
+    display: flex;
+    // width: $works-container-width;
+    width: 100%;
+    height: 50vh;
+    // overflow: hidden;/*float解除*/
+    margin: 50vh 0 0 0;
+
+  }
+  .container img{
+    width: 50vw;
+    height: 45vh;
+    float: left;/*画像の位置を右下にしたい場合はright*/
+    
+  }
+  .initialChar{
+    float: left;/*画像の位置を右下にしたい場合はright*/
+    font-size: 40px;
+    margin: 0.3em 0.5em 0 0.4em;
+  }
+  
+  .pageNo{
+    @include worksPageNo();
+
+  }
+}
