--- a/src/app/components/works/work-template2/work-template2.component.scss
+++ b/src/app/components/works/work-template2/work-template2.component.scss
@@ -6,7 +6,7 @@
 
 .container {
   width: $works-container-width;
-  padding: 25px;
+  margin: 60vh auto 0;
   overflow: hidden;/*float解除*/
 }
 .container img{
@@ -22,4 +22,37 @@
 
 .pageNo{
   @include worksPageNo();
+}
+
+@media screen and (max-width: 768px) {
+  .text{
+    @include worksText();
+    font-size: 2vw;
+    
+
+  }
+  .container {
+    display: flex;
+    // width: $works-container-width;
+    width: 100%;
+    // overflow: hidden;/*float解除*/
+    margin: 50vh 0 0 0;
+
+  }
+  .container img{
+    width: 70vw;
+    height: 30vh;
+    float: left;/*画像の位置を右下にしたい場合はright*/
+  }
+  .initialChar{
+    float: right;/*画像の位置を右下にしたい場合はright*/
+    font-size: 8vw;
+
+    margin: 0.3em 0.5em 0 0.4em;
+  }
+  
+  .pageNo{
+    @include worksPageNo();
+
+  }
 }
