--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,7 +1,13 @@
 .footer{
   background-color: #FFFFFF;
-  margin-top: 300px;
   height: 15vh;
+  margin-top: 300px;
+
+  .name{
+    font-family: 'Athelas';
+    font-size: 15px;
+    margin: 0 0 30px 100px;
+  }
 
   a{
     text-decoration: none;
@@ -11,38 +17,77 @@
     font-size: 15px;
   }
 
+  .account_img{
+    position: relative;
+    background-color: #FFFFFF;
+    
+  
+    p{
+      text-align: center;
+      padding: 20px;
+    }
+      
+    .mail{
+      width: 39px;
+      position: absolute;
+      right: 90px;
+      top: 4px;
+      
+    }
+    .insta{
+      width: 39px;
+      position: absolute;
+      right: 40px;
+    }
+  }
 }
 
-
-.name{
-  font-family: 'Athelas';
-  font-size: 15px;
-  margin-left: 100px;
-  margin-bottom: 20px;
-
-}
-.account_img{
-  position: relative;
-  background-color: #FFFFFF;
-
-
-  p{
-    text-align: center;
-    padding: 20px;
-  }
+@media screen and (max-width: 768px) {
+  .footer{
+    background-color: #FFFFFF;
+    height: 15vh;
+    margin-top: 20vh;
+  
+    .name{
+      font-family: 'Athelas';
+      font-size: 5vw;
+      margin: 0 0 2vh 5vw;
+    }
+  
+    a{
+      text-decoration: none;
+      color: black;
+      margin: 3vh 9vw;
+      font-family: 'Athelas';
+      font-size: 5vw;
+    }
+  
+    .account_img{
+      position: relative;
+      background-color: #FFFFFF;
+      
     
-  .mail{
-    width: 39px;
-    position: absolute;
-    right: 90px;
-    top: 4px;
-    
+      p{
+        text-align: center;
+        padding: 20px;
+      }
+        
+      .mail{
+        width: 7vw;
+        position: absolute;
+        right: 20vw;
+        top: 0.5vh;
+      
+      }
+      .insta{
+        width: 7vw;
+        position: absolute;
+        right: 10vw;
+      }
+    }
   }
-  .insta{
-    width: 39px;
-    position: absolute;
-    right: 40px;
-  }
+
+
 }
 
 
