--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,51 +1,66 @@
 p{
   text-align: center;
-  font-family: 'Book Antiqua';
+  font-size: 1vw;
 }
 
 #contact {
-  
-  font-size: 20px;
+  font-family: 'Athelas';
   margin-top: 500px;
+
+  p{
+    text-align: center;
+    font-size: 2vw;
+  }
 }
 
 .name{
   font-family: 'Athelas';
-  font-size: 18px;
+  font-size: 2vw;
   margin-top: 50px;
 }
 
 .jap-message{
   font-family: 'ヒラギノ角ゴ ProN';
-  margin-top: 25px;
+  margin-top: 3vw;
+  font-size: 1.2vw;
 }
 
 .en-message{
-  font-family: 'Book Antiqua';
-  margin-bottom: 20px;
+  font-family: 'Athelas';
+  margin-bottom: 2vw;
+  font-size: 1.3vw;
 }
 
 a{
   text-decoration: none;
   color: black;
   
+  
 }
 
 .address{
   border: solid 1px #6C6C6C;
-  width: 400px;
-  margin: 0 auto;
+  width: 40vw;
+  padding: 10px;
+  margin: 0 auto 300px;
+
 }
 
 @media screen and (max-width: 768px) {
   p{
     text-align: center;
-    font-family: 'Book Antiqua';
+    font-size: 3vw;
   }
   
   #contact {
-    font-size: 20px;
     margin-top: 500px;
+    font-family: 'Athelas';
+    
+    p{
+      text-align: center;
+      font-size: 7vw;
+    }
+    
   }
   
   .name{
@@ -56,13 +71,13 @@ a{
   
   .jap-message{
     font-family: 'ヒラギノ角ゴ ProN';
-    font-size: 2vw;
+    font-size: 3vw;
     margin-top: 5vh;
   }
   
   .en-message{
     font-family: 'Book Antiqua';
-    font-size: 2vw;
+    font-size: 2.8vw;
     margin-bottom: 3vh;
 
   }
@@ -70,15 +85,14 @@ a{
   a{
     text-decoration: none;
     color: black;
-    font-size: 3vw;
-    
   }
   
   .address{
     border: solid 1px #6C6C6C;
     width: 75vw;
-    padding: 10px;
-    margin: 0 auto;
+    padding: 8px;
+    margin: 0 auto 150px;
+
   }
 
 
