--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -8,7 +8,7 @@
  
 
 .Works-title{
-  font-family: 'Book Antiqua';
+  font-family: 'Athelas';
   color: #2E2D2D;
   letter-spacing: 3.25px;
   font-size: 2vw;
@@ -45,7 +45,7 @@ img{
 
 
   p.Works-title{
-    font-family: 'Book Antiqua';
+    font-family: 'Athelas';
     font-size: 4vw;
     text-align: center;
     margin-bottom: 10vh;
