--- a/src/app/components/works/work-template2/work-template2.component.scss
+++ b/src/app/components/works/work-template2/work-template2.component.scss
@@ -2,6 +2,7 @@
 
 .text{
   @include worksText();
+  font-size: 1.5vw;
 }
 
 .container {
@@ -10,7 +11,7 @@
   overflow: hidden;/*float解除*/
 }
 .container img{
-  width: 500px;
+  width: 40vw;
   float: left;/*画像の位置を右下にしたい場合はright*/
   margin: 1.2em 1.2em 0 0;/*画像の周りの余白*/
 }
