--- a/src/app/components/works/work-template3/work-template3.component.scss
+++ b/src/app/components/works/work-template3/work-template3.component.scss
@@ -2,20 +2,20 @@
 
 .text{
   @include worksText();
+  font-size: 1.5vw;
 }
 .container {
-  display: flex;
   width: $works-container-width;
   margin: 60vh auto 0;
   overflow: hidden;/*float解除*/
 }
 .container img{
-  width: 500px;
-  float: left;/*画像の位置を右下にしたい場合はright*/
+  width: 40vw;
+  float: right;/*画像の位置を右下にしたい場合はright*/
   margin: 0 0 0 1.2em;/*画像の周りの余白*/
 }
 .initialChar{
-  float: left;/*画像の位置を右下にしたい場合はright*/
+  float: right;/*画像の位置を右下にしたい場合はright*/
   font-size: 40px;
   margin: 0.3em 0.5em 0 0.4em;
 }
