spレスポンシブ編集

--- a/src/app/components/works/work-template1/work-template1.component.scss
+++ b/src/app/components/works/work-template1/work-template1.component.scss
@@ -35,9 +35,9 @@
   }
   .container {
     display: flex;
-    // width: $works-container-width;
-    width: 100%;
+    width: $works-container-width;
     height: 50vh;
+    width: 100%;
     // overflow: hidden;/*float解除*/
     margin: 50vh 0 0 0;
 
