--- a/src/app/components/works/work-template2/work-template2.component.scss
+++ b/src/app/components/works/work-template2/work-template2.component.scss
@@ -29,10 +29,11 @@
   .text{
     @include worksText();
     font-size: 2vw;
+    margin-bottom: 5vh;
   }
   .container {
-    display: flex;
-    // width: $works-container-width;
+
+    width: $works-container-width;
     width: 100%;
     // overflow: hidden;/*float解除*/
     margin: 50vh 0 0 0;
