--- a/src/app/components/works/work-template1/work-template1.component.scss
+++ b/src/app/components/works/work-template1/work-template1.component.scss
@@ -25,6 +25,7 @@
 
 .pageNo{
   @include worksPageNo();
+  font-family: 'Athelas';
 }
 
 @media screen and (max-width: 768px) {
@@ -56,6 +57,7 @@
   
   .pageNo{
     @include worksPageNo();
+    font-family: 'Athelas';
 
   }
 }
