--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -8,38 +8,47 @@
     font-size: 1.5vw;
     margin: 0 0 20px 10vw;
   }
-
+  p{
+    
+    font-family: 'Athelas';
+    font-size: 1.5vw;
+  
   a{
     text-decoration: none;
     color: black;
     margin: 0 13vw;
     font-family: 'Athelas';
-    font-size: 1.5vw;
   }
+  }
+
+  
 }
   .account_img{
     position: relative;
     background-color: #FFFFFF;
     height: 10vh;
+
+      
+    .mail{
+      width: 3vw;
+      position: absolute;
+      right: 12vw;
+      top: 4px;
+      margin-right: 2vw;
+      
+    }
+    .insta{
+      width: 3vw;
+      position: absolute;
+      right: 10vw;
+    }
     
     p{
       text-align: center;
       padding: 20px;
       font-family: 'Athelas';
       font-size: 1.5vw;
-    }
       
-    .mail{
-      width: 39px;
-      position: absolute;
-      right: 14vw;
-      top: 4px;
-      
-    }
-    .insta{
-      width: 39px;
-      position: absolute;
-      right: 10vw;
     }
   }
 
@@ -47,7 +56,7 @@
 @media screen and (max-width: 768px) {
   .footer{
     background-color: #FFFFFF;
-    height: 19vh;
+    height: 100%;
     padding: 10px;
     
   
@@ -61,7 +70,7 @@
       text-decoration: none;
       color: black;
       font-family: 'Athelas';
-      font-size: 5vw;
+      font-size: 3vw;
     }
   }
   
@@ -82,7 +91,7 @@
       .mail{
         width: 5vw;
         position: absolute;
-        right: 15vw;
+        right: 13vw;
         top: 1.9vh;
       
       }
