--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,13 +1,15 @@
-<div id="contact">
-  <p>contact</p>
-</div>
-<div>
-  <p class="name">KOTARO YAMAMOTO</p>
-</div>
-<div>
-  <p class="jap-message">ご依頼は下記メールアドレスまでご連絡ください。</p>
-  <p class="en-message">For requests,please contact the following email address.</p>
-</div>
-<div>
-  <a href="mailto:kotaro.ymt@gmail.com"><p class="address">kotaro.ymt@gmail.com</p></a>
+<div class="contact">
+  <div class="title">
+    <p>contact</p>
+  </div>
+  <!-- <div>
+    <p class="name">contact</p>
+  </div> -->
+  <div>
+    <p class="jap-message">ご依頼は下記メールアドレスまでご連絡ください。</p>
+    <p class="en-message">For requests,please contact the following email address.</p>
+  </div>
+  <div>
+    <a href="mailto:kotaro.ymt@gmail.com"><p class="address">kotaro.ymt@gmail.com</p></a>
+  </div>
 </div>
