--- a/src/app/components/topview/topview.component.html
+++ b/src/app/components/topview/topview.component.html
@@ -1,3 +1,4 @@
-<div>
-  <img src="{{topviewURL}}"/>
+<div class="image-wrapper">
+  <img class="topview-pc" src="{{topviewPcURL}}" alt=""/>
+  <img class="topview-sp" src="{{topviewSpURL}}" alt=""/>
 </div>
