--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -1,8 +1,11 @@
 <div id="works" class="works-boxes">
-  <p class="Works-title">works</p>
-  <ul class="works-box">
+  <!-- <p class="Works-title">works</p> -->
+  <div class="insta-wrapper">
+    <img class="insta-smaple" src="assets/images/insta.png">
+  </div>
+  <!-- <ul class="works-box">
     <li *ngFor="let imgUrl of workImgList">
       <img src="{{imgUrl}}?fit=crop&w=200&h=200"/>
     </li>
-  </ul>
+  </ul> -->
 </div>
