--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,11 @@
 <div class="footer">
-  <p class="name">KOTARO YAMAMOTO</p>
+  <!-- <p class="name">KOTARO YAMAMOTO</p>
   <p><a href="#works" class="">-works</a></p>
-  <p><a href="#contact" class="">-contact</a></p>
-</div>
-<div class="account_img">
-  <a href="mailto:kotaro.ymt@gmail.com"><img class="mail" src="assets/images/mail.svg"/></a>
-  <a href="https://www.instagram.com/kotaroymt/" target="_blank" rel="noopener noreferrer"><img class="insta" src="assets/images/insta.svg"/></a>
-  <p class="footer_name">@ {{year}} yamamoto kotaro</p>
+  <p><a href="#contact" class="">-contact</a></p> -->
+  <div class="account_img">
+    <a href="mailto:kotaro.ymt@gmail.com"><img class="mail" src="assets/images/mail.svg"/></a>
+    <a href="https://www.instagram.com/kotaroymt/" target="_blank" rel="noopener noreferrer"><img class="insta" src="assets/images/insta.svg"/></a>
+  </div>
+  <p class="copyright">@ {{year}} yamamoto kotaro</p>
 </div>
 
