--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
-<div calss="">
-  <p class="Header-title">KOTARO YAMAMOTO</p>
-</div>
+<header class="header" [style.top.px]="headerPos">
+  <p class="header-title">KOTARO YAMAMOTO</p>
+</header>
