--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,8 @@
 
 <app-header></app-header>
 <app-topview></app-topview>
-<app-works></app-works>
+<!-- <app-works></app-works> -->
+<app-insta></app-insta>
 <app-contact></app-contact>
 <app-footer></app-footer>
 
