--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,7 @@
 
 .header{
   position: fixed;
+  z-index: 100;
   background-color: #fff;
   width:100%;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.05);
