--- a/src/app/components/insta/insta.component.html
+++ b/src/app/components/insta/insta.component.html
@@ -1,7 +1,7 @@
   <div class="insta-wrapper">
     <ul>
       <li *ngFor="let src of orgImages; index as i">
-        <a href="{{ links[i] }}"  target="_blank" rel="noopener noreferrer"><img src="{{ src }}" alt=""></a>
+        <a href="{{ links[i] }}"  target="_blank" rel="noopener noreferrer"><img src="{{ src }}" alt="" loading="eager"></a>
       </li>
     </ul>
   </div>
