--- a/src/app/components/topview/topview.component.scss
+++ b/src/app/components/topview/topview.component.scss
@@ -4,6 +4,7 @@
     margin: 58px auto 450px auto;
     @media screen and (max-width: 768px) {
       width: 100%;
+      margin: 0 auto 250px;
     }
     img.topview-pc{
       width: 100%;
